2013-06-24 Miguel de Dios <miguel.dedios@artica.es>

	* include/functions_visual_map.php,
	include/ajax/visual_console_builder.ajax.php: fixed the color of
	lines in the editor.
	
	MERGED FROM THE BRANCH PANDORA_4.0

2013-06-24 Miguel de Dios <miguel.dedios@artica.es>

	* godmode/reporting/visual_console_builder.editor.js,
	godmode/reporting/visual_console_builder.editor.php,
	include/functions_visual_map_editor.php: changed the code to show
	the list of parent in the select, now this selectbox doesn't show
	the same item.
	
	MERGED FROM THE BRANCH PANDORA_4.0

2013-06-20 Mario Pulido <mario.pulido@artica.es>

	*include/help/es/help_module_tokens.php
        include/help/en/help_module_tokens.php:Added new help

2013-06-20 Miguel de Dios <miguel.dedios@artica.es>

	* include/graphs/functions_pchart.php: fixed the graphs with all
	values in negative Y axis. Now it shows correct.
	
	Fixes: #2302
	
	MERGED FROM THE BRANCH PANDORA_4.0

2013-06-20 Miguel de Dios <miguel.dedios@artica.es>

	* include/graphs/fgraph.php, include/graphs/functions_pchart.php:
	merged the changes from the branch 4.

2013-06-20 Miguel de Dios <miguel.dedios@artica.es>

	* godmode/agentes/modificar_agente.php: fixed the filter of the
	list of agents. The branch 4 runs fine.

2013-06-20 Miguel de Dios <miguel.dedios@artica.es>

	* godmode/events/events.php, operation/netflow/nf_live_view.php:
	fixed the hook to call a enterprise function.

2013-06-20 Miguel de Dios <miguel.dedios@artica.es>

	* include/graphs/pChart/pPie.class.php, include/graphs/fgraph.php:
	fixed the htmlentities in the pie chart legend, the border was
	fixed for older commits.
	
	MERGED FROM THE BRANCH PANDORA_4.0

2013-06-20  Junichi Satoh  <junichi@rworks.jp>

	* include/help/ja/help_alerts_config.php: Added a new help.

2013-06-19 Mario Pulido <mario.pulido@artica.es>	

	*godmode/alerts/alert_list.php,
	godmode/alerts/configure_alert_template.php,
	godmode/alerts/alert_templates.php,