@@ -193,7 +193,7 @@ function readFields() {
 	
 	var values = {};
 	
-	values['label'] = $("input[name=label]").val(); 
+	values['label'] = $("input[name=label]").val();
 	
 	
 	var text = tinymce.get('text-label2').getContent();
@@ -1256,9 +1256,6 @@ function updateDB_visual(type, idElement , values, event, top, left) {
 	}
 	
 	switch (type) {
-		case 'module_graph':
-			$("#image_" + idElement).attr("src", getModuleGraph(idElement));
-			break;
 		case 'static_graph':
 			if ((event != 'resizestop') && (event != 'show_grid')
 				&& (event != 'dragstop')) {
@@ -1330,6 +1327,11 @@ function updateDB_visual(type, idElement , values, event, top, left) {
 		case 'simple_value':
 		case 'label':
 		case 'icon':
+		case 'module_graph':
+			
+			if (type == 'module_graph')
+				$("#image_" + idElement).attr("src", getModuleGraph(idElement));
+			
 			if ((typeof(values['mov_left']) != 'undefined') &&
 					(typeof(values['mov_top']) != 'undefined')) {
 				$("#" + idElement).css('top', '0px').css('top', top + 'px');
