@@ -1,5 +1,12 @@
 2013-06-24 Miguel de Dios <miguel.dedios@artica.es>
 
+	* godmode/reporting/visual_console_builder.editor.js: fixed the
+	moving the lines when the item is a graph.
+	
+	MERGED FROM THE BRANCH PANDORA_4.0
+
+2013-06-24 Miguel de Dios <miguel.dedios@artica.es>
+
 	* include/functions_visual_map.php,
 	include/ajax/visual_console_builder.ajax.php: fixed the color of
 	lines in the editor.
